# pathologic

./: .gitignore  .pylintrc  LICENSE  README.md  data.csv  data_archived.csv  fix_paths.py  fix_pylint.py  pyproject.toml
docs/en/: data-schema.md  explainability-and-error-analysis.md  model-plugin-guide.md  quickstart.md  training-and-tuning.md
docs/examples/: example_01_basic_workflow.py  example_02_ensemble_builder.py  example_03_finetune.py  example_04_explainability_report.py
docs/tr/: egitim-tuning-rehberi.md  explainability-ve-hata-analizi.md  hizli-baslangic.md  model-ekleme-rehberi.md  nas-search-ornekleri.md  veri-formati-ve-sabitler.md
pathologic/: __init__.py  api_overrides.py  core.py  core_helpers.py
pathologic/configs/: __init__.py  defaults.yaml  mlp_architecture.yaml
pathologic/data/: __init__.py  loader.py  preprocessor.py
pathologic/engine/: __init__.py  evaluator.py  trainer.py  tuner.py
pathologic/explain/: __init__.py  biological_mapper.py  error_analysis.py  false_positive_analyzer.py  schemas.py  service.py  shap_engine.py  visualizer.py
pathologic/models/: __init__.py  builder.py  factory.py  hybrid.py  registry.py
pathologic/nas/: __init__.py  search.py
pathologic/search/: __init__.py  artifacts.py  bootstrap.py  candidate.py  cli.py  core.py  data.py  evaluation.py  explainability.py  hpo_nas.py  logging.py  orchestration.py  progress.py  reporting.py  spec.py  utils.py
pathologic/utils/: __init__.py  benchmark.py  calibration.py  colorstr.py  compute_cost.py  distribution_diagnostics.py  hardware.py  logger.py  progress.py
reports/: model_performance_report.qmd
scripts/: __init__.py  analyze_data_bias.py  benchmark_report.py  export_leaderboard_csv.py  run_full_pipeline.sh  search_best_model.py  train_xgboost_from_data_csv.py
scripts/tests/: __init__.py  conftest.py
tests/integration/: test_api_integration.py  test_api_overrides_integration.py  test_config_model_params_integration.py  test_lightgbm_early_stopping_integration.py  test_phase2_preprocess_artifact_integration.py  test_phase3_model_integration.py  test_phase4_engine_integration.py  test_phase5_nas_integration.py  test_phase6_explainability_integration.py  test_phase7_finetune_integration.py  test_phase8_quickstart_integration.py  test_phase9_rc_smoke.py  test_search_best_model_integration.py
tests/unit/: test_api_unit.py  test_class_imbalance_scale_pos_weight_unit.py  test_compute_cost_unit.py  test_config_unit.py  test_error_analysis_unit.py  test_explainability_unit.py  test_finetune_unit.py  test_hybrid_unit.py  test_lightgbm_integration.py  test_lightgbm_wrapper_unit.py  test_loader_unit.py  test_logger_unit.py  test_model_wrappers_unit.py  test_nas_search_unit.py  test_nas_strategies_unit.py  test_preprocessor_unit.py  (+10 more)
(+53 files in other folders)
